fix overflow bug on everything

--- a/Styles/global/3_blocks/_top-menu.less
+++ b/Styles/global/3_blocks/_top-menu.less
@@ -7,6 +7,13 @@
 	background: @color__orange;
 	min-height: 100vh;
 
+	@media (min-width: 912px) {
+		&__bg {
+			background-image: linear-gradient(to right,#f15540 63.63636364%,#d83a36 36.36363636%);
+			height: 1343px;
+		}
+	}
+
 	.query-min(@screen--lg; {
   	background: @color__orange--dark;
 		background-image: linear-gradient(
